--- a/client/html/index.html
+++ b/client/html/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/mainstyle.css">
 </head>
 <body>
 
@@ -2106,4 +2106,5 @@
 
 </body>
 
-<script src="app.js"></script>
+<script src="js/app.js"></script>
+</html>
