--- a/client/html/menu.html
+++ b/client/html/menu.html
@@ -4,7 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="css/menustyle.css">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            background-color: #2d2d2d;
+            gap: 20vmin;
+            margin: 15%;
+            margin-top: 10%;
+            margin-bottom: 10%;
+            overflow-x: hidden;
+            -webkit-tap-highlight-color:rgba(0,0,0,0)
+        }
+        .right{
+            display: flex;
+            flex-direction: row-reverse;
+            transition: transform 0.3s;
+        }
+        .left{
+            display: flex;
+            flex-direction: row;
+            transition: transform 0.3s;
+        }
+        .right:hover{
+            transform: scale(120%) translate(-10vw,0);
+        }
+        .left:hover{
+            transform: scale(120%) translate(10vw,0);
+        }
+        #board1{
+            max-width: 50vw;
+            max-height: 60vh;
+            cursor: pointer;
+        }
+        #board2{
+            max-width: 50vw;
+            max-height: 80vh;
+            cursor: pointer;
+        }
+        #board3{
+            max-width: 60vw;
+            max-height: 70vh;
+            cursor: pointer;
+        }
+        #board4, #board5{
+            max-width: 60vw;
+            max-height: 80vh;
+            cursor: pointer;
+        }
+        #board6{
+            max-width: 60vw;
+            max-height: 60vh;
+            cursor: pointer;
+        }
+        ::-webkit-scrollbar {
+            width: 5px;
+            height: 5px;
+        }
+        ::-webkit-scrollbar-thumb {
+            background-color: #535353;
+        }
+        ::-webkit-scrollbar-track {
+            background: transparent;
+        }
+    </style>
 </head>
 <body>
     <div class="right">
@@ -56,8 +119,7 @@
     function boardClick(boardId){
         socket.emit("new-room", boardId)
         socket.on("room-added", (newRoomId, creatorKey) =>{
-            if(newRoomId)
-                window.location.href='/room/' + newRoomId + '/' + creatorKey
+            window.location.href='/room/' + newRoomId + '/' + creatorKey
         })
     }
 </script>
