--- a/client/html/menu.html
+++ b/client/html/menu.html
@@ -110,7 +110,7 @@
 
 <script src='js/node_modules/socket.io-client/dist/socket.io.min.js'></script>
 <script>
-    const socket = io('http://192.168.238.129:3000')
+    const socket = io('http://localhost:3000')
     //const socket = io()
     for(const preview of document.querySelectorAll(".boardPreview")){
         preview.setAttribute('onclick', "boardClick(id)")
